added contact us and other info

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -23,7 +23,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
   <a href="contactus.html">Contact Us</a>
   <a href="portfolio.html">Portfolio</a>
 </div>
+        <div id="mainsection">
         <h1>Kilmaine Kakes</h1>
         <h2>Welcome to out webpage showing our recent projects with contact info and any other relevant details.</h2>
+        </div>
     </body>
 </html>
