added more code

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -16,8 +16,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
+    
     <body>
-        
+            <img style='display:  block; margin-left:  auto;' src="images/OIG2.JPG" height="100"  alt="logo">
         <div class="navbar">
   <a href="home.html">Home</a>
   <a href="contactus.html">Contact Us</a>
@@ -25,7 +26,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 </div>
         <div id="mainsection">
         <h1>Kilmaine Kakes</h1>
-        <h2>Welcome to out webpage showing our recent projects with contact info and any other relevant details.</h2>
+        <h2>Welcome to out webpage showing our recent projects with contact info and any other relevant details. Our company was founded in 2039 to celebrate Barron Trump's second term in office, 8 years after WW3 is concluded by the powerpuff girls after they take out Osama Bin Laden's 8th niece once removed, Michelle Obama's pet goldfish, who was hiding in a cave, in Hawaii after the mainland was recaptured by the British in exchange for a greggs sausage roll and a can of Rhubarb and Custard Dragon Soop. We also do cakes. </h2>
+        <img style='display:  block; margin-bottom:  auto;' src="images/foot.JPG" height="300"  alt="logo">
         </div>
     </body>
 </html>
