--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,10 +19,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
+        <img style='display:  block; margin-left:  auto;' src="images/OIG2.JPG" height="100"  alt="logo">
         <div id="content_container">
              <div id="form_container">
                 <div id="form_header_container">
                     <h2 id="form_header"> Login</h2>
+          
                 </div>
 
                 
