--- a/public_html/contactus.html
+++ b/public_html/contactus.html
@@ -11,6 +11,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap" rel="stylesheet">
+                 <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Our stylesheet -->
         <link rel="stylesheet" type="text/css" href="index.css">
         <meta charset="UTF-8">
@@ -51,6 +53,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <div id="Credit">
             <p>Background image source</p>
         <a href="https://www.vecteezy.com/free-vector/bakery">Bakery Vectors by Vecteezy</a>
+        </div>
+          <div>
+              <h1>Social Media</h1>
+        <!-- Add font awesome icons -->
+<a href="#" class="fa fa-facebook">Facebook</a>
+<a href="#" class="fa fa-twitter">Twitter</a>
         </div>
         
     </body>
