--- a/public_html/home.html
+++ b/public_html/home.html
@@ -15,6 +15,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link rel="stylesheet" type="text/css" href="index.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta http-equiv="X-Content-Type-Options" content="nosniff">
+              <meta name="referrer" content="no-referrer-when-downgrade">
+              <meta http-equiv="Strict-Transport-Security" content="max-age=31536000;>
+               <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: blob: *.google.com *.gstatic.com; style-src 'self' 'unsafe-inline' *.google.com *.googleapis.com; script-src 'self' 'unsafe-inline' *.googleapis.com *.google.com;">
     </head>
     
     <body>
