--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,6 +8,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
     <head>
           <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
+            <meta http-equiv="X-Content-Type-Options" content="nosniff">
+              <meta name="referrer" content="no-referrer-when-downgrade">
+               <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: blob: *.google.com *.gstatic.com; style-src 'self' 'unsafe-inline' *.google.com *.googleapis.com; script-src 'self' 'unsafe-inline' *.googleapis.com *.google.com;">
+         
         <title>Login</title>
          <!-- Cool Google Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
