--- a/public_html/contactus.html
+++ b/public_html/contactus.html
@@ -17,6 +17,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link rel="stylesheet" type="text/css" href="index.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <!--change-->
                         <meta http-equiv="X-Content-Type-Options" content="nosniff">
               <meta name="referrer" content="no-referrer-when-downgrade">
     </head>
