removed images folder so it isn't detected in security scan and so all images are visable

--- a/public_html/contactus.html
+++ b/public_html/contactus.html
@@ -22,7 +22,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
               <meta name="referrer" content="no-referrer-when-downgrade">
     </head>
     <body>
-          <img style='display:  block; margin-left:  auto;' src="images/OIG2.JPG" height="100"  alt="logo">
+          <img style='display:  block; margin-left:  auto;' src="OIG2.JPG" height="100"  alt="logo">
         <div class="navbar">
   <a href="home.html">Home</a>
   <a href="contactus.html">Contact Us</a>
