--- a/public_html/portfolio.html
+++ b/public_html/portfolio.html
@@ -14,7 +14,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                  <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     
- <img style='display:  block; margin-left:  auto;' src="images/OIG2.JPG" height="100"  alt="logo">
+ <img style='display:  block; margin-left:  auto;' src="OIG2.JPG" height="100"  alt="logo">
       <div class="navbar">
   <a href="home.html">Home</a>
   <a href="contactus.html">Contact Us</a>
